# generic-dice

./: .buildinfo  .gitignore  LICENSE  README.md  climate_module.hansel2020.html  index.html  objects.inv  project.clj  py-modindex.html  searchindex.js
_modules/: climate_module.html
_modules/climate_module/: options.html  provider.html
clj/generic-dice/: README.md  project.clj
python/climate-module/: LICENSE  README.md  pyproject.toml
python/climate-module/climate_module/: __init__.py  __main__.py  cmd.py  core.py  options.py  provider.py
python/climate-module/climate_module/hansel2020/: __init__.py  inputs.py  model.py  parameters.py
python/climate-module/climate_module/resources/: SSP markers ratio non_CO2 to CO2.csv  hansel FFI.csv  net-emissions SSP1.csv  net-emissions SSP2.csv  net-emissions SSP3.csv  net-emissions SSP4.csv  net-emissions SSP5.csv
python/climate-module/docs/: climate_module.resources.rst  climate_module.rst  conf.py  modules.rst
python/climate-module/docs/_build/doctrees/: climate_module.doctree  climate_module.hansel2020.doctree  climate_module.resources.doctree  environment.pickle  index.doctree  modules.doctree
python/climate-module/docs/_build/html/: climate_module.html  climate_module.resources.html  genindex.html  modules.html  search.html
python/climate-module/docs/_build/html/_modules/: index.html
python/climate-module/docs/_build/html/_modules/climate_module/: core.html
python/climate-module/docs/_build/html/_sources/: climate_module.hansel2020.rst.txt  index.rst.txt
src/generic_dice/: core.clj  provider.clj
(+15 files in other folders)
